fix overflow food detail page

--- a/src/pages/foodDetail/FoodDetailPage.scss
+++ b/src/pages/foodDetail/FoodDetailPage.scss
@@ -15,7 +15,6 @@
             height: 621px;
             background: $dark-blue;
             border-radius: 16px;
-            overflow-y: auto;
 
             .size,
             .milk {
